use scss for the styles, configured jekyll to minify the css by default

--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ safe: true # always trues on github-pages, disables _plugins/
 markdown: kramdown
 sass:
   indentWidth: 4
-  style: compact
+  style: compressed
   precision: 10
 plugins:
   - jekyll-sitemap
